# WES-2025

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
WinFormsApp1/: WinFormsApp1.sln
WinFormsApp1/WinFormsApp1/: Form1.Designer.cs  Form1.cs
components/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.c.spare  accelerometer.h  accelerometer.h.spare
components/adc/: CMakeLists.txt  adc.h
components/button/: button.c
components/gui/: CMakeLists.txt  app.c  app.h  gui.c  gui.h
components/gui/squareline/screens/: ui_Screen1.c
components/joy/: CMakeLists.txt  joy.c
components/mqtt_driver/: CMakeLists.txt  mqtt_driver.h
components/spi/: spi.c  spi.h
esp32_dev_board/: .c-template  .h-template  partitions.csv  sdkconfig.defaults
esp32_dev_board/components/gui/: CMakeLists.txt  app.c  app.h  gui.c
esp32_dev_board/components/gui/inc/: btnqueue.h
esp32_dev_board/components/gui/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
esp32_dev_board/components/gui/squareline/components/: ui_comp_hook.c
esp32_dev_board/components/gui/squareline/images/: ui_img_1548857385.c  ui_img_1599370223.c  ui_img_1600593050.c  ui_img_1896724463.c  ui_img_1924809568.c  ui_img_2008805362.c  ui_img_730112842.c  ui_img_maps_1_png.c
esp32_dev_board/components/gui/squareline/screens/: ui_CarInfo.c  ui_HomeScreeen.c  ui_MapScreen.c  ui_ParkMode.c  ui_Settings.c
esp32_dev_board/components/gui/src/: btnqueue.c
main/: app_main.c
squarelineProject/: hackathon25.sll  hackathon25.spj
(+49 files in other folders)
